--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <div class="flex flex-col md:flex-row gap-6">
                     <div class="flex-1 bg-black/5 dark:bg-white/5 p-4 md:p-6 rounded-lg">
                         <ul class="space-y-2 text-sm md:text-base">
-                            <li>• sinal sonoro e visual nos horários programados.</li>
+                            <li>• Sinal sonoro e visual nos horários programados.</li>
                             <li>• Todos interrompem a atividade.</li>
                             <li>• Realização de alongamentos.</li>
                             <li>• <strong>Duração:</strong> 5 a 10 minutos.</li>
