att 3 Implementação Descrição

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                          onerror="this.src='logo.jpeg'; this.onerror=function(){this.src='logo.png'}">
                 </div>
                 <div>
-                    <h1 class="font-cangaco text-lg md:text-xl leading-none uppercase text-couro dark:text-white">Cangaço <span class="text-laranja dark:text-ouro">Corp.</span></h1>
+                    <h1 class="font-cangaco text-lg md:text-xl leading-none uppercase text-couro dark:text-white">Cangaço <span class="text-laranja dark:text-ouro">Corporativo</span></h1>
                     <p class="text-[8px] md:text-[10px] font-bold tracking-[0.2em] md:tracking-[0.3em] uppercase opacity-70 text-couro dark:text-gray-300">Equipe 3 | Rende+</p>
                 </div>
             </div>
@@ -159,7 +159,7 @@
             </div>
         </section>
 
-        <section id="projetos" class="mb-16 md:mb-24 scroll-mt-32">
+       <section id="projetos" class="mb-16 md:mb-24 scroll-mt-32">
             <h3 class="text-2xl md:text-3xl font-cangaco text-center mb-8 md:mb-12 uppercase flex items-center justify-center gap-3 text-couro dark:text-white">
                 <i class="fas fa-scroll text-laranja dark:text-ouro"></i> Propostas
             </h3>
@@ -173,9 +173,12 @@
                 <div class="bg-black/5 dark:bg-white/5 p-4 md:p-6 rounded-lg mb-4">
                     <h5 class="font-bold mb-4 uppercase text-xs tracking-wider opacity-70">Como funciona:</h5>
                     <ul class="space-y-4 text-sm md:text-base">
-                        <li class="flex gap-3"><i class="fas fa-bullhorn mt-1 text-red-500 shrink-0"></i><span><strong>Fluxo de Reporte:</strong> O colaborador avisa o Supervisor, que encaminha a demanda à Recepção.</span></li>
-                        <li class="flex gap-3"><i class="fas fa-clock mt-1 text-red-500 shrink-0"></i><span><strong>Triagem:</strong> <span class="font-bold text-red-500">Alta (24h)</span>, <span class="font-bold text-orange-500">Média (72h)</span>, <span class="font-bold text-green-500">Baixa (120h)</span>.</span></li>
-                        <li class="flex gap-3"><i class="fas fa-check-circle mt-1 text-red-500 shrink-0"></i><span><strong>Feedback:</strong> Recepção comunica o desfecho.</span></li>
+                        <li class="flex gap-3"><i class="fas fa-bullhorn mt-1 text-red-500 shrink-0"></i><span><strong>Fluxo de Reporte:</strong> O Supervisor/Coordenador preenche as informações do problema via canal oficial (WhatsApp/Formulário Digital/Aplicativo/Site) e encaminha para a Recepção.</span></li>
+                        <li class="flex gap-3"><i class="fas fa-bullhorn mt-1 text-red-500 shrink-0"></i><span><strong>Lançamento:</strong> A Recepção recebe o relato e insere os dados no sistema interno de controle, direcionando a demanda para o setor de SST.</span></li>
+                        <li class="flex gap-3"><i class="fas fa-clock mt-1 text-red-500 shrink-0"></i><span><strong>Triagem:</strong> O setor de SST avalia a validade da solicitação e atribui o Nível de Urgência. <span class="font-bold text-red-500">Alta (24h)</span>, <span class="font-bold text-orange-500">Média (72h)</span>, <span class="font-bold text-green-500">Baixa (120h)</span>.</span></li>
+                        <li class="flex gap-3"><i class="fas fa-clock mt-1 text-red-500 shrink-0"></i><span><strong>Análise Financeira:</strong> O Financeiro avalia a viabilidade orçamentária com base na urgência definida.</span></li>
+                        <li class="flex gap-3"><i class="fas fa-bullhorn mt-1 text-red-500 shrink-0"></i><span><strong>Execução:</strong> Caso acatado, o reparo ou aquisição é realizado prontamente.</span></li>
+                        <li class="flex gap-3"><i class="fas fa-check-circle mt-1 text-red-500 shrink-0"></i><span><strong>Feedback:</strong> O Financeiro registra o status no sistema e anexa a evidência. A Recepção monitora essa atualização e sinaliza ao colaborador solicitante o desfecho do processo.</span></li>
                     </ul>
                 </div>
             </div>
@@ -186,23 +189,33 @@
                     <h4 class="text-xl md:text-2xl font-bold font-cangaco leading-tight">2. Cadastro de Fornecedores</h4>
                 </div>
                 <p class="mb-6 text-base md:text-lg opacity-90"><strong>Objetivo:</strong> Organizar, padronizar e facilitar a gestão de parceiros comerciais.</p>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
                     <div class="bg-black/5 dark:bg-white/5 p-4 md:p-5 rounded-lg border-l-4 border-yellow-500 flex md:block items-center gap-4">
                         <span class="text-3xl font-bold opacity-30 block md:mb-2">01</span>
-                        <div><h5 class="font-bold mb-1">Identificação</h5><p class="text-sm opacity-80">Pesquisas e cotações.</p></div>
+                        <div><h5 class="font-bold mb-1">Identificação</h5><p class="text-sm opacity-80">O processo inicia-se com a identificação de um potencial fornecedor, que pode ocorrer por meio de pesquisas de mercado, indicações, cotações, participação em processos de compra ou demandas internas da empresa.</p></div>
                     </div>
                     <div class="bg-black/5 dark:bg-white/5 p-4 md:p-5 rounded-lg border-l-4 border-yellow-500 flex md:block items-center gap-4">
                         <span class="text-3xl font-bold opacity-30 block md:mb-2">02</span>
-                        <div><h5 class="font-bold mb-1">Coleta</h5><p class="text-sm opacity-80">Levantamento de dados.</p></div>
+                        <div><h5 class="font-bold mb-1">Coleta</h5><p class="text-sm opacity-80">Após a identificação, são coletadas as principais informações necessárias para o cadastro.</p></div>
                     </div>
                     <div class="bg-black/5 dark:bg-white/5 p-4 md:p-5 rounded-lg border-l-4 border-yellow-500 flex md:block items-center gap-4">
                         <span class="text-3xl font-bold opacity-30 block md:mb-2">03</span>
-                        <div><h5 class="font-bold mb-1">Cadastro</h5><p class="text-sm opacity-80">Registro no sistema.</p></div>
+                        <div><h5 class="font-bold mb-1">Cadastro</h5><p class="text-sm opacity-80">Com as informações reunidas, o fornecedor é registrado em uma planilha de controle ou em um sistema/site de apoio, garantindo que todos os dados estejam padronizados e devidamente organizados.</p></div>
                     </div>
+                </div> <p class="mb-4 text-base md:text-lg opacity-90"><strong>Benefícios do Cadastro de Fornecedores:</strong> </p>
+                <div class="bg-black/5 dark:bg-white/5 p-4 md:p-6 rounded-lg">
+                    <ul class="space-y-2 text-sm md:text-base">
+                        <li>• Melhoria nas negociações, com maior poder de comparação entre fornecedores.</li>
+                        <li>• Agilidade nos processos de compra.</li>
+                        <li>• Maior controle de qualidade dos produtos e serviços adquiridos.</li>
+                        <li>• Diversificação da base de fornecedores.</li>
+                        <li>• Redução de custos operacionais.</li>
+                        <li>• Compras mais eficientes e seguras.</li>
+                        <li>• Diminuição de riscos nas contratações.</li>
+                    </ul>
                 </div>
-            </div>
-
-            <div class="glass p-5 md:p-8 border-t-4 border-green-500 hover:-translate-y-2 transition-transform duration-300">
+            </div> <div class="glass p-5 md:p-8 border-t-4 border-green-500 hover:-translate-y-2 transition-transform duration-300">
                 <div class="flex items-center gap-3 md:gap-4 mb-4 md:mb-6">
                     <div class="w-12 h-12 md:w-14 md:h-14 shrink-0 bg-green-500/20 text-green-500 rounded-full flex items-center justify-center text-xl md:text-2xl"><i class="fas fa-heartbeat"></i></div>
                     <h4 class="text-xl md:text-2xl font-bold font-cangaco leading-tight">3. Pausas Ergonômicas</h4>
@@ -228,8 +241,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </div> </section>
 
         <section id="bando" class="scroll-mt-32">
             <h3 class="text-2xl md:text-3xl font-cangaco text-center mb-8 md:mb-12 uppercase flex items-center justify-center gap-3 text-couro dark:text-white">
